Возможность упрощения привязки для child'ов

--- a/TestProject.lpi
+++ b/TestProject.lpi
@@ -11,7 +11,7 @@
       </Flags>
       <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
-      <Title Value="MeshCommander"/>
+      <Title Value="TestProject"/>
       <UseAppBundle Value="False"/>
       <ResourceType Value="res"/>
     </General>
@@ -28,7 +28,7 @@
     </RunParams>
     <Units Count="5">
       <Unit0>
-        <Filename Value="MeshCommander.lpr"/>
+        <Filename Value="TestProject.lpr"/>
         <IsPartOfProject Value="True"/>
       </Unit0>
       <Unit1>
@@ -54,7 +54,7 @@
     <Version Value="11"/>
     <PathDelim Value="\"/>
     <Target>
-      <Filename Value="MeshCommander"/>
+      <Filename Value="TestProject"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
