--- a/MeshCommander.lpi
+++ b/MeshCommander.lpi
@@ -26,7 +26,7 @@
       <FormatVersion Value="2"/>
       <Modes Count="0"/>
     </RunParams>
-    <Units Count="6">
+    <Units Count="5">
       <Unit0>
         <Filename Value="MeshCommander.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -45,14 +45,10 @@
         <IsPartOfProject Value="True"/>
       </Unit3>
       <Unit4>
-        <Filename Value="tests\ogf_parser_tests.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit4>
-      <Unit5>
         <Filename Value="commandsparser.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="CommandsParser"/>
-      </Unit5>
+      </Unit4>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -63,7 +59,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="lowlevel;tests"/>
+      <OtherUnitFiles Value="lowlevel"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
   </CompilerOptions>
